<resources>
    <string name="app_name">Allrim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_activity_writing">WritingActivity</string>
    
    <string name="notice">알림</string>
    <string name="schedule">시간표</string>
    <string name="writing">내가 쓴 글</string>
    <string name="comment">내가 쓴 댓글</string>
    <string name="set">설정</string>
    <string name="board">게시판 종류</string>




    <string name="title">글쓰기</string>
    <string name="nickname">닉네임</string>
    <string name="infoAno">* 익명을 원하신다면 익명에 체크를 해주세요.</string>

</resources>