<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".writing">

    <TextView
        android:id="@+id/Writing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="글 작성하기"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="15sp"/>

        <EditText
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="104dp"
            android:layout_height="24dp"
            android:layout_marginLeft="15sp"
            android:gravity="center"
            android:text="@string/nickname"
            android:textColor="#000000"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/Anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:text="익명" />

        <CheckBox
            android:id="@+id/RealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="실명" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/infoAno"
        android:textSize="12sp"
        android:layout_marginLeft="30sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450sp">
        <!--        <EditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"/>-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="등록" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="취소" />

    </LinearLayout>


</LinearLayout>